# school-project-interpreter

./: CMakeLists.txt  Cargo.toml
include/core/lexer/: lex.h  token.h  token_type.h
include/utils/: read_src.h
lexer/: .gitignore
lexer/src/: lib.rs  typeof_token.rs
src/: CMakeLists.txt  main.cpp  main.rs
src/core/lexer/: lex.cpp  token_type.cpp
src/utils/: read_src.cpp
test/scripts/: example.sl
